Edited Recommendations page, css margins to be viewport scalable, media query, deleted css codes notes, shifted style from hormonal imbalance page to css and made sections, completed references page, fixed scroll to buttons on recommendation page

--- a/style.css
+++ b/style.css
@@ -42,10 +42,14 @@ h1, h2, h4 {
 
 .fullContainer {
     display: flex;
-    gap: 20px;
-    width: 100%;
+    gap: 2vw;
+    width: 60vw;
     align-items: flex-start;
     margin: 20px;
+    margin-left: 20%;
+    margin-right: 20%;
+    max-width: 1500px;
+    justify-content: space-around;
 }
 
 /* Entire Calculator portion*/
@@ -62,10 +66,25 @@ h1, h2, h4 {
     text-align: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 768px) {
     .fullContainer {
         flex-direction: column;
         gap: 0px;
+    }
+    .pages {
+        margin: 5vh 3vw;
+    }
+    .graph {
+        margin: 5vh 3vw;
+    }
+    .text {
+        border-width: 1vh 3vw;
+    }
+}
+
+@media (max-width: 768px) and (orientation: landscape) {
+    .pages {
+        margin: auto 0px;
     }
 }
 
@@ -158,14 +177,54 @@ button:hover {
 .references i {
     font-style: italic;
 }
+button.scroll  {
+    width: 30vh;
+}
 
 .scroll {
     display: flex;
     width: 50%;
-    justify-content: space-around;
     gap: 20px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
+.imbalance1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.topics {
+    display: grid;
+    width: auto;
+    gap: 1vh;
+    text-align: left;
+    justify-content: center;
+    align-items: start;
+    margin: auto;
+    justify-items: start;
+    grid-template-columns: 1fr 1fr;
+}
+
+.topics a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    }
+section {
+    margin: 7vh 0vh;
+}
+.references a {
+    text-decoration: none;
+    color: black;
+}
+.references a:hover{
+    color: #5D396F;
+    text-decoration: underline;
+    font-weight: bold;
+}
 .thanks {
     padding: 80px 80px;
     text-align: center; 
@@ -199,60 +258,3 @@ button:hover {
 ::-webkit-scrollbar-thumb:hover {
     background: #C2A5D1; /* color of the handle when hovered */
 }
-/*
-CSS HEX
---white: #FFFFFFff;
---tea-rose-red: #E8B2B2ff;
---lilac: #C2A5D1ff;
---redwood: #995151ff;
---bone: #EADFD0ff;
---snow: #F7EDEDff;
---lavender-web: #DEE2FFff;
-
-CSS HSL
---white: hsla(0, 0%, 100%, 1);
---tea-rose-red: hsla(0, 54%, 80%, 1);
---lilac: hsla(280, 32%, 73%, 1);
---redwood: hsla(0, 31%, 46%, 1);
---bone: hsla(35, 38%, 87%, 1);
---snow: hsla(0, 38%, 95%, 1);
---lavender-web: hsla(233, 100%, 94%, 1);
-
-SCSS HEX
-$white: #FFFFFFff;
-$tea-rose-red: #E8B2B2ff;
-$lilac: #C2A5D1ff;
-$redwood: #995151ff;
-$bone: #EADFD0ff;
-$snow: #F7EDEDff;
-$lavender-web: #DEE2FFff;
-
-SCSS HSL
-$white: hsla(0, 0%, 100%, 1);
-$tea-rose-red: hsla(0, 54%, 80%, 1);
-$lilac: hsla(280, 32%, 73%, 1);
-$redwood: hsla(0, 31%, 46%, 1);
-$bone: hsla(35, 38%, 87%, 1);
-$snow: hsla(0, 38%, 95%, 1);
-$lavender-web: hsla(233, 100%, 94%, 1);
-
-SCSS RGB
-$white: rgba(255, 255, 255, 1);
-$tea-rose-red: rgba(232, 178, 178, 1);
-$lilac: rgba(194, 165, 209, 1);
-$redwood: rgba(153, 81, 81, 1);
-$bone: rgba(234, 223, 208, 1);
-$snow: rgba(247, 237, 237, 1);
-$lavender-web: rgba(222, 226, 255, 1);
-
-SCSS Gradient
-$gradient-top: linear-gradient(0deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-right: linear-gradient(90deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-bottom: linear-gradient(180deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-left: linear-gradient(270deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-top-right: linear-gradient(45deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-bottom-right: linear-gradient(135deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-top-left: linear-gradient(225deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-bottom-left: linear-gradient(315deg, #FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-$gradient-radial: radial-gradient(#FFFFFFff, #E8B2B2ff, #C2A5D1ff, #995151ff, #EADFD0ff, #F7EDEDff, #DEE2FFff);
-*/
